--- a/index.html
+++ b/index.html
@@ -134,22 +134,27 @@
 </section>
 
 
-<!-- Teaser video-->
+<!-- Summary figure-->
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-      <video poster="" id="tree" autoplay controls muted loop height="100%">
-        <!-- Your video here -->
+      <!-- <video poster="" id="tree" autoplay controls muted loop height="100%">
         <source src="static/videos/banner_video.mp4"
         type="video/mp4">
-      </video>
-      <h2 class="subtitle has-text-centered">
-        Aliquam vitae elit ullamcorper tellus egestas pellentesque. Ut lacus tellus, maximus vel lectus at, placerat pretium mi. Maecenas dignissim tincidunt vestibulum. Sed consequat hendrerit nisl ut maximus. 
+      </video> -->
+      <img src="assets/SafeDigit-Summary-3.0.png" width="90%" height="90%">
+
+      <h2 class="subtitle has-text-justified">
+        As illustrated in the summary figure, this paper proposes a receding horizon control synthesis method that constructs a trajectory-parameterized reachable set of a bipedal robot over one walking step. 
+        During online operation, this paper describes how to construct a numerical optimization problem to identify a trajectory that ensures that the biped does not fall over or collide with any obstacles. 
+        Due to the application of the reachable set within the optimization problem, any feasible solution to the optimization problem can be realized on the biped in a provably safe fashion.
+        In particular, this paper describes the construction and application of a robust control input to track numerically computed trajectories with bounded tracking error under model uncertainty. 
+        To ensure that this optimization problem can be solved rapidly, this paper describes how to compute numerical derivatives for all relevant components of the optimization problem. 
       </h2>
     </div>
   </div>
 </section>
-<!-- End teaser video -->
+<!-- End summary figure -->
 
 <!-- Paper abstract -->
 <section class="section hero is-light">
@@ -215,54 +220,37 @@
 </section>
 <!-- End image carousel -->
 
-
-
-
-<!-- Youtube video -->
-<section class="hero is-small is-light">
-  <div class="hero-body">
-    <div class="container">
-      <!-- Paper video. -->
-      <h2 class="title is-3">Video Presentation</h2>
-      <div class="columns is-centered has-text-centered">
-        <div class="column is-four-fifths">
-          
-          <div class="publication-video">
-            <!-- Youtube embed code here -->
-            <iframe src="https://www.youtube.com/embed/JkaxUblCGz0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- End youtube video -->
-
-
 <!-- Video carousel -->
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
-      <h2 class="title is-3">Another Carousel</h2>
+      <h2 class="title is-3">Simulation Experiments</h2>
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item item-video1">
           <video poster="" id="video1" autoplay controls muted loop height="100%">
             <!-- Your video file here -->
-            <source src="static/videos/carousel1.mp4"
+            <source src="https://github.com/Cfather/DigitSafePlanning/assets/41474684/94da9bc5-3682-4018-a1bc-5d3b125f3a4d"
             type="video/mp4">
           </video>
         </div>
         <div class="item item-video2">
           <video poster="" id="video2" autoplay controls muted loop height="100%">
             <!-- Your video file here -->
-            <source src="static/videos/carousel2.mp4"
+            <source src="https://github.com/Cfather/DigitSafePlanning/assets/41474684/e7adff7b-5764-4fcf-932d-a135ff689ee0"
             type="video/mp4">
           </video>
         </div>
         <div class="item item-video3">
           <video poster="" id="video3" autoplay controls muted loop height="100%">\
             <!-- Your video file here -->
-            <source src="static/videos/carousel3.mp4"
+            <source src="https://github.com/Cfather/DigitSafePlanning/assets/41474684/76bfa8e5-ed90-416b-b1b1-3321ce12194b"
+            type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-video4">
+          <video poster="" id="video4" autoplay controls muted loop height="100%">\
+            <!-- Your video file here -->
+            <source src="https://github.com/Cfather/DigitSafePlanning/assets/41474684/0003c6ed-3eac-458f-b6f8-5ea734122ac8"
             type="video/mp4">
           </video>
         </div>
