--- a/index.html
+++ b/index.html
@@ -220,31 +220,31 @@
 <!-- End stepover figure -->
 
 <!-- Video carousel -->
-<section class="hero is-small">
+<section class="hero teaser">
   <div class="hero-body">
-    <div class="container">
+    <div class="container is-max-desktop">
       <h2 class="title is-3">Simulation Experiments</h2>
       <div class="item item-video1">
-        <video poster="" id="video1" autoplay controls muted loop height="100%">
-          <source src="https://github-production-user-asset-6210df.s3.amazonaws.com/41474684/322775192-94da9bc5-3682-4018-a1bc-5d3b125f3a4d.mp4?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAVCODYLSA53PQK4ZA%2F20240417%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20240417T054200Z&X-Amz-Expires=300&X-Amz-Signature=b0a7474865d1bd52e78b6fb9a98ed0f9dbae156b846652e9e5b70a9445839671&X-Amz-SignedHeaders=host&actor_id=41474684&key_id=0&repo_id=784068442"
+        <video poster="assets/result_15.png" id="video1" autoplay controls muted loop height="100%">
+          <source src="https://github.com/Cfather/DigitSafePlanning/assets/41474684/94da9bc5-3682-4018-a1bc-5d3b125f3a4d"
           type="video/mp4">
         </video>
       </div>
       <div class="item item-video2">
-        <video poster="" id="video2" autoplay controls muted loop height="100%">
-          <source src="https://github-production-user-asset-6210df.s3.amazonaws.com/41474684/322775294-e7adff7b-5764-4fcf-932d-a135ff689ee0.mp4?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAVCODYLSA53PQK4ZA%2F20240417%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20240417T054227Z&X-Amz-Expires=300&X-Amz-Signature=4f0cc5ceff66d2a5ae1cfe92a2a4cfc1a52c1fbfd1f346e452e6921530810f6f&X-Amz-SignedHeaders=host&actor_id=41474684&key_id=0&repo_id=784068442"
+        <video poster="assets/result_21.png" id="video2" autoplay controls muted loop height="100%">
+          <source src="https://github.com/Cfather/DigitSafePlanning/assets/41474684/e7adff7b-5764-4fcf-932d-a135ff689ee0"
           type="video/mp4">
         </video>
       </div>
       <div class="item item-video3">
-        <video poster="" id="video3" autoplay controls muted loop height="100%">
-          <source src="https://github-production-user-asset-6210df.s3.amazonaws.com/41474684/322775497-76bfa8e5-ed90-416b-b1b1-3321ce12194b.mp4?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAVCODYLSA53PQK4ZA%2F20240417%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20240417T054239Z&X-Amz-Expires=300&X-Amz-Signature=676f7959220685c8ee2b2786759518b92c097a739365a741a4ba31858f676ab8&X-Amz-SignedHeaders=host&actor_id=41474684&key_id=0&repo_id=784068442"
+        <video poster="assets/result_64.png" id="video3" autoplay controls muted loop height="100%">
+          <source src="https://github.com/Cfather/DigitSafePlanning/assets/41474684/76bfa8e5-ed90-416b-b1b1-3321ce12194b"
           type="video/mp4">
         </video>
       </div>
       <div class="item item-video4">
-        <video poster="" id="video4" autoplay controls muted loop height="100%">
-          <source src="https://github-production-user-asset-6210df.s3.amazonaws.com/41474684/322775589-0003c6ed-3eac-458f-b6f8-5ea734122ac8.mp4?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAVCODYLSA53PQK4ZA%2F20240417%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20240417T054252Z&X-Amz-Expires=300&X-Amz-Signature=6335340935251f7ce85121428f896c67f1806ac6f6bf742a5e9fe58e8ff01a21&X-Amz-SignedHeaders=host&actor_id=41474684&key_id=0&repo_id=784068442"
+        <video poster="assets/result_70.png" id="video4" autoplay controls muted loop height="100%">
+          <source src="https://github.com/Cfather/DigitSafePlanning/assets/41474684/0003c6ed-3eac-458f-b6f8-5ea734122ac8"
           type="video/mp4">
         </video>
       </div>
