--- a/index.html
+++ b/index.html
@@ -225,25 +225,25 @@
     <div class="container is-max-desktop">
       <h2 class="title is-3">Simulation Experiments</h2>
       <div class="item item-video1">
-        <video poster="assets/result_15.png" id="video1" autoplay controls muted loop height="100%">
+        <video poster="assets/result_15.png" id="video1" autoplay controls muted loop height="90%">
           <source src="https://github.com/Cfather/DigitSafePlanning/assets/41474684/94da9bc5-3682-4018-a1bc-5d3b125f3a4d"
           type="video/mp4">
         </video>
       </div>
       <div class="item item-video2">
-        <video poster="assets/result_21.png" id="video2" autoplay controls muted loop height="100%">
+        <video poster="assets/result_21.png" id="video2" autoplay controls muted loop height="90%">
           <source src="https://github.com/Cfather/DigitSafePlanning/assets/41474684/e7adff7b-5764-4fcf-932d-a135ff689ee0"
           type="video/mp4">
         </video>
       </div>
       <div class="item item-video3">
-        <video poster="assets/result_64.png" id="video3" autoplay controls muted loop height="100%">
+        <video poster="assets/result_64.png" id="video3" autoplay controls muted loop height="90%">
           <source src="https://github.com/Cfather/DigitSafePlanning/assets/41474684/76bfa8e5-ed90-416b-b1b1-3321ce12194b"
           type="video/mp4">
         </video>
       </div>
       <div class="item item-video4">
-        <video poster="assets/result_70.png" id="video4" autoplay controls muted loop height="100%">
+        <video poster="assets/result_70.png" id="video4" autoplay controls muted loop height="90%">
           <source src="https://github.com/Cfather/DigitSafePlanning/assets/41474684/0003c6ed-3eac-458f-b6f8-5ea734122ac8"
           type="video/mp4">
         </video>
@@ -253,31 +253,11 @@
 </section>
 <!-- End video carousel -->
 
-
-
-
-
-
-<!-- Paper poster -->
-<!-- <section class="hero is-small is-light">
-  <div class="hero-body">
-    <div class="container">
-      <h2 class="title">Poster</h2>
-
-      <iframe  src="static/pdfs/sample.pdf" width="100%" height="550">
-          </iframe>
-        
-      </div>
-    </div>
-  </section> -->
-<!--End paper poster -->
-
-
 <!--BibTex citation -->
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>BibTex Code Here</code></pre>
+      <pre><code>Coming soon</code></pre>
     </div>
 </section>
 <!--End BibTex citation -->
@@ -291,7 +271,7 @@
 
           <p>
             This page was built using the <a href="https://github.com/eliahuhorwitz/Academic-project-page-template" target="_blank">Academic Project Page Template</a> which was adopted from the <a href="https://nerfies.github.io" target="_blank">Nerfies</a> project page.
-            You are free to borrow the of this website, we just ask that you link back to this page in the footer. <br> This website is licensed under a <a rel="license"  href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Creative
+            <br> This website is licensed under a <a rel="license"  href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Creative
             Commons Attribution-ShareAlike 4.0 International License</a>.
           </p>
 
