--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">Academic Project Page</h1>
+            <h1 class="title is-1 publication-title">Provably-Safe, Real-time Planning & Control For Bipedal Robots Using Reachability-Based Trajectory Design</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
                 <a href="https://cfather.github.io/jimzhang.github.io/" target="_blank">Bohao Zhang</a><sup>*</sup>,</span>
                 <span class="author-block">
-                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Second Author</a><sup>*</sup>,</span>
-                  <span class="author-block">
+                  <!-- <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Second Author</a><sup>*</sup>,</span>
+                  <span class="author-block"> -->
                     <a href="https://www.roahmlab.com/ram-personal" target="_blank">Ram Vasudevan</a>
                   </span>
                   </div>
