add more videos

--- a/index.html
+++ b/index.html
@@ -79,17 +79,6 @@
                       </a>
                     </span>
 
-                    <!-- Supplementary PDF link -->
-                    <!-- <span class="link-block">
-                      <a href="static/pdfs/supplementary_material.pdf" target="_blank"
-                      class="external-link button is-normal is-rounded is-dark">
-                      <span class="icon">
-                        <i class="fas fa-file-pdf"></i>
-                      </span>
-                      <span>Supplementary</span>
-                    </a>
-                  </span> -->
-
                   <!-- Github link -->
                   <span class="link-block">
                     <a href="https://github.com/roahmlab/IDTO" target="_blank"
@@ -221,26 +210,38 @@
     <div class="container is-max-desktop">
       <h2 class="title is-3">Simulation Experiments</h2>
       <div class="item item-video1">
-        <video poster="assets/result_15.png" id="video1" autoplay controls muted loop height="90%">
-          <source src="https://github.com/Cfather/DigitSafePlanning/assets/41474684/94da9bc5-3682-4018-a1bc-5d3b125f3a4d"
+        <video poster="assets/result_9.png" id="video1" autoplay controls muted loop height="90%">
+          <source src="https://github.com/Cfather/DigitSafePlanning/assets/41474684/89d27164-8ebf-47a0-83f4-375fce56b8d8"
           type="video/mp4">
         </video>
       </div>
       <div class="item item-video2">
-        <video poster="assets/result_21.png" id="video2" autoplay controls muted loop height="90%">
-          <source src="https://github.com/Cfather/DigitSafePlanning/assets/41474684/e7adff7b-5764-4fcf-932d-a135ff689ee0"
+        <video poster="assets/result_15.png" id="video1" autoplay controls muted loop height="90%">
+          <source src="https://github.com/Cfather/DigitSafePlanning/assets/41474684/9e37d1ec-c56e-4bd4-a6ca-8421b861e6f0"
           type="video/mp4">
         </video>
       </div>
       <div class="item item-video3">
-        <video poster="assets/result_64.png" id="video3" autoplay controls muted loop height="90%">
-          <source src="https://github.com/Cfather/DigitSafePlanning/assets/41474684/76bfa8e5-ed90-416b-b1b1-3321ce12194b"
+        <video poster="assets/result_21.png" id="video2" autoplay controls muted loop height="90%">
+          <source src="https://github.com/Cfather/DigitSafePlanning/assets/41474684/59bcc662-105e-40cb-90ad-3639cfa087e5"
           type="video/mp4">
         </video>
       </div>
       <div class="item item-video4">
+        <video poster="assets/result_64.png" id="video3" autoplay controls muted loop height="90%">
+          <source src="https://github.com/Cfather/DigitSafePlanning/assets/41474684/ffabb3e6-1d70-4386-9f25-187208ea630d"
+          type="video/mp4">
+        </video>
+      </div>
+      <div class="item item-video5">
         <video poster="assets/result_70.png" id="video4" autoplay controls muted loop height="90%">
-          <source src="https://github.com/Cfather/DigitSafePlanning/assets/41474684/0003c6ed-3eac-458f-b6f8-5ea734122ac8"
+          <source src="https://github.com/Cfather/DigitSafePlanning/assets/41474684/81edb294-657a-4d71-9b94-f00461fedbbd"
+          type="video/mp4">
+        </video>
+      </div>
+      <div class="item item-video6">
+        <video poster="assets/result_91.png" id="video4" autoplay controls muted loop height="90%">
+          <source src="https://github.com/Cfather/DigitSafePlanning/assets/41474684/42d34aa2-cfad-4f5b-b894-8edfb30f7309"
           type="video/mp4">
         </video>
       </div>
