--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="https://cfather.github.io/jimzhang.github.io/" target="_blank">Bohao Zhang</a><sup>*</sup>,</span>
+                <a href="https://cfather.github.io/jimzhang.github.io/" target="_blank">Bohao Zhang</a><sup></sup>,</span>
                 <span class="author-block">
                   <!-- <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Second Author</a><sup>*</sup>,</span>
                   <span class="author-block"> -->
@@ -146,19 +146,21 @@
 <!-- Summary figure-->
 <section class="hero teaser">
   <div class="container is-max-desktop">
-    <div class="hero-body">
-      <br>
-      <br>
-      <br>
-      <img src="assets/SafeDigit-Summary-3.0.png" width="100%" height="100%">
+    <div class="columns is-centered">
+      <div class="hero-body">
+        <br>
+        <br>
+        <br>
+        <img src="assets/SafeDigit-Summary-3.0.png" width="100%" height="100%">
 
-      <h2 class="subtitle has-text-justified">
-        As illustrated in the summary figure, this paper proposes a receding horizon control synthesis method that constructs a trajectory-parameterized reachable set of a bipedal robot over one walking step. 
-        During online operation, this paper describes how to construct a numerical optimization problem to identify a trajectory that ensures that the biped does not fall over or collide with any obstacles. 
-        Due to the application of the reachable set within the optimization problem, any feasible solution to the optimization problem can be realized on the biped in a provably safe fashion.
-        In particular, this paper describes the construction and application of a robust control input to track numerically computed trajectories with bounded tracking error under model uncertainty. 
-        To ensure that this optimization problem can be solved rapidly, this paper describes how to compute numerical derivatives for all relevant components of the optimization problem. 
-      </h2>
+        <h2 class="subtitle has-text-justified">
+          As illustrated in the summary figure, this paper proposes a receding horizon control synthesis method that constructs a trajectory-parameterized reachable set of a bipedal robot over one walking step. 
+          During online operation, this paper describes how to construct a numerical optimization problem to identify a trajectory that ensures that the biped does not fall over or collide with any obstacles. 
+          Due to the application of the reachable set within the optimization problem, any feasible solution to the optimization problem can be realized on the biped in a provably safe fashion.
+          In particular, this paper describes the construction and application of a robust control input to track numerically computed trajectories with bounded tracking error under model uncertainty. 
+          To ensure that this optimization problem can be solved rapidly, this paper describes how to compute numerical derivatives for all relevant components of the optimization problem. 
+        </h2>
+      </div>
     </div>
   </div>
 </section>
@@ -167,19 +169,21 @@
 <!-- Reachset figure-->
 <section class="hero teaser">
   <div class="container is-max-desktop">
-    <div class="hero-body">
-      <!-- <video poster="" id="tree" autoplay controls muted loop height="100%">
-        <source src="static/videos/banner_video.mp4"
-        type="video/mp4">
-      </video> -->
-      <img src="assets/reachset-demo.jpg" width="60%" height="60%">
+    <div class="columns is-centered">
+      <div class="hero-body">
+        <!-- <video poster="" id="tree" playsinline disablepictureinpicture disableremoteplayback controls muted loop height="100%">
+          <source src="static/videos/banner_video.mp4"
+          type="video/mp4">
+        </video> -->
+        <img src="assets/reachset-demo.jpg" width="60%" height="60%">
 
-      <h2 class="subtitle has-text-justified">
-        This figure demonstrates how we construct the reachable set on the lower limbs of Digit step by step. 
-        The first figure shows the reachable set of two joints in one time interval, constructed by Theorem \ref{thm-reachset-joint}. 
-        The second figure shows the reachable set of the link by connecting two joint reachable sets, constructed by Theorem \ref{thm-reachset-link}. 
-        The third and the fourth figure extend this to all time intervals and then all links, constructed by Theorem \ref{thm-reachset-wholebody}.
-      </h2>
+        <h2 class="subtitle has-text-justified">
+          This figure demonstrates how we construct the reachable set on the lower limbs of Digit step by step. 
+          The first figure shows the reachable set of two joints in one time interval, constructed by Theorem \ref{thm-reachset-joint}. 
+          The second figure shows the reachable set of the link by connecting two joint reachable sets, constructed by Theorem \ref{thm-reachset-link}. 
+          The third and the fourth figure extend this to all time intervals and then all links, constructed by Theorem \ref{thm-reachset-wholebody}.
+        </h2>
+      </div>
     </div>
   </div>
 </section>
@@ -188,17 +192,19 @@
 <!-- Stepover figure-->
 <section class="hero teaser">
   <div class="container is-max-desktop">
-    <div class="hero-body">
-      <!-- <video poster="" id="tree" autoplay controls muted loop height="100%">
-        <source src="static/videos/banner_video.mp4"
-        type="video/mp4">
-      </video> -->
-      <img src="assets/step_over.png" width="60%" height="60%">
+    <div class="columns is-centered">
+      <div class="hero-body">
+        <!-- <video poster="" id="tree" playsinline disablepictureinpicture disableremoteplayback controls muted loop height="100%">
+          <source src="static/videos/banner_video.mp4"
+          type="video/mp4">
+        </video> -->
+        <img src="assets/step_over.png" width="60%" height="60%">
 
-      <h2 class="subtitle has-text-justified">
-        This figure shows how Digit steps over one low obstacle plotted in red in one walking step, together with the robot reachable set corresponding with the optimal trajectory parameter that is found by the online optimization.
-        The robot reachable set is plotted in blue, and is not in collision with the low obstacle.
-      </h2>
+        <h2 class="subtitle has-text-justified">
+          This figure shows how Digit steps over one low obstacle plotted in red in one walking step, together with the robot reachable set corresponding with the optimal trajectory parameter that is found by the online optimization.
+          The robot reachable set is plotted in blue, and is not in collision with the low obstacle.
+        </h2>
+      </div>
     </div>
   </div>
 </section>
@@ -208,42 +214,44 @@
 <section class="hero teaser">
   <div class="hero-body">
     <div class="container is-max-desktop">
-      <h2 class="title is-3">Simulation Experiments</h2>
-      <div class="item item-video1">
-        <video poster="assets/result_9.png" id="video1" autoplay controls muted loop height="90%">
-          <source src="https://github.com/Cfather/DigitSafePlanning/assets/41474684/89d27164-8ebf-47a0-83f4-375fce56b8d8"
-          type="video/mp4">
-        </video>
-      </div>
-      <div class="item item-video2">
-        <video poster="assets/result_15.png" id="video1" autoplay controls muted loop height="90%">
-          <source src="https://github.com/Cfather/DigitSafePlanning/assets/41474684/9e37d1ec-c56e-4bd4-a6ca-8421b861e6f0"
-          type="video/mp4">
-        </video>
-      </div>
-      <div class="item item-video3">
-        <video poster="assets/result_21.png" id="video2" autoplay controls muted loop height="90%">
-          <source src="https://github.com/Cfather/DigitSafePlanning/assets/41474684/59bcc662-105e-40cb-90ad-3639cfa087e5"
-          type="video/mp4">
-        </video>
-      </div>
-      <div class="item item-video4">
-        <video poster="assets/result_64.png" id="video3" autoplay controls muted loop height="90%">
-          <source src="https://github.com/Cfather/DigitSafePlanning/assets/41474684/ffabb3e6-1d70-4386-9f25-187208ea630d"
-          type="video/mp4">
-        </video>
-      </div>
-      <div class="item item-video5">
-        <video poster="assets/result_70.png" id="video4" autoplay controls muted loop height="90%">
-          <source src="https://github.com/Cfather/DigitSafePlanning/assets/41474684/81edb294-657a-4d71-9b94-f00461fedbbd"
-          type="video/mp4">
-        </video>
-      </div>
-      <div class="item item-video6">
-        <video poster="assets/result_91.png" id="video4" autoplay controls muted loop height="90%">
-          <source src="https://github.com/Cfather/DigitSafePlanning/assets/41474684/42d34aa2-cfad-4f5b-b894-8edfb30f7309"
-          type="video/mp4">
-        </video>
+      <div class="columns is-centered">
+        <h2 class="title is-3">Simulation Experiments</h2>
+        <div class="item item-video1">
+          <video poster="assets/result_9.png" id="video1" playsinline disablepictureinpicture disableremoteplayback controls muted loop height="90%">
+            <source src="https://github.com/Cfather/DigitSafePlanning/assets/41474684/89d27164-8ebf-47a0-83f4-375fce56b8d8"
+            type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-video2">
+          <video poster="assets/result_15.png" id="video1" playsinline disablepictureinpicture disableremoteplayback controls muted loop height="90%">
+            <source src="https://github.com/Cfather/DigitSafePlanning/assets/41474684/9e37d1ec-c56e-4bd4-a6ca-8421b861e6f0"
+            type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-video3">
+          <video poster="assets/result_21.png" id="video2" playsinline disablepictureinpicture disableremoteplayback controls muted loop height="90%">
+            <source src="https://github.com/Cfather/DigitSafePlanning/assets/41474684/59bcc662-105e-40cb-90ad-3639cfa087e5"
+            type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-video4">
+          <video poster="assets/result_64.png" id="video3" playsinline disablepictureinpicture disableremoteplayback controls muted loop height="90%">
+            <source src="https://github.com/Cfather/DigitSafePlanning/assets/41474684/ffabb3e6-1d70-4386-9f25-187208ea630d"
+            type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-video5">
+          <video poster="assets/result_70.png" id="video4" playsinline disablepictureinpicture disableremoteplayback controls muted loop height="90%">
+            <source src="https://github.com/Cfather/DigitSafePlanning/assets/41474684/81edb294-657a-4d71-9b94-f00461fedbbd"
+            type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-video6">
+          <video poster="assets/result_91.png" id="video4" playsinline disablepictureinpicture disableremoteplayback controls muted loop height="90%">
+            <source src="https://github.com/Cfather/DigitSafePlanning/assets/41474684/42d34aa2-cfad-4f5b-b894-8edfb30f7309"
+            type="video/mp4">
+          </video>
+        </div>
       </div>
     </div>
   </div>
