--- a/index.html
+++ b/index.html
@@ -150,7 +150,9 @@
       <br>
       <br>
       <br>
-      <img src="assets/SafeDigit-Summary-3.0.png" width="100%" height="100%">
+      <div style="display: flex; justify-content: center;">
+        <img src="assets/SafeDigit-Summary-3.0.png" width="100%" height="100%">
+      </div>
 
       <h2 class="subtitle has-text-justified">
         As illustrated in the summary figure, this paper proposes a receding horizon control synthesis method that constructs a trajectory-parameterized reachable set of a bipedal robot over one walking step. 
@@ -172,7 +174,9 @@
         <source src="static/videos/banner_video.mp4"
         type="video/mp4">
       </video> -->
-      <img src="assets/reachset-demo.jpg" width="60%" height="60%">
+      <div style="display: flex; justify-content: center;">
+        <img src="assets/reachset-demo.jpg" width="60%" height="60%">
+      </div>
 
       <h2 class="subtitle has-text-justified">
         This figure demonstrates how we construct the reachable set on the lower limbs of Digit step by step. 
@@ -193,7 +197,9 @@
         <source src="static/videos/banner_video.mp4"
         type="video/mp4">
       </video> -->
-      <img src="assets/step_over.png" width="60%" height="60%">
+      <div style="display: flex; justify-content: center;">
+        <img src="assets/step_over.png" width="60%" height="60%">
+      </div>
 
       <h2 class="subtitle has-text-justified">
         This figure shows how Digit steps over one low obstacle plotted in red in one walking step, together with the robot reachable set corresponding with the optimal trajectory parameter that is found by the online optimization.
@@ -215,32 +221,32 @@
             type="video/mp4">
           </video>
         </div>
-        <div class="item item-video2">
-          <video poster="assets/result_15.png" id="video1" playsinline disablepictureinpicture disableremoteplayback controls muted loop height="90%">
+        <div class="item item-video2 is-centered">
+          <video poster="assets/result_15.png" id="video1" playsinline disablepictureinpicture disableremoteplayback controls muted loop onclick="this.paused ? this.play() : this.pause();" height="90%">
             <source src="https://github.com/Cfather/DigitSafePlanning/assets/41474684/9e37d1ec-c56e-4bd4-a6ca-8421b861e6f0"
             type="video/mp4">
           </video>
         </div>
-        <div class="item item-video3">
-          <video poster="assets/result_21.png" id="video2" playsinline disablepictureinpicture disableremoteplayback controls muted loop height="90%">
+        <div class="item item-video3 is-centered">
+          <video poster="assets/result_21.png" id="video2" playsinline disablepictureinpicture disableremoteplayback controls muted loop onclick="this.paused ? this.play() : this.pause();" height="90%">
             <source src="https://github.com/Cfather/DigitSafePlanning/assets/41474684/59bcc662-105e-40cb-90ad-3639cfa087e5"
             type="video/mp4">
           </video>
         </div>
-        <div class="item item-video4">
-          <video poster="assets/result_64.png" id="video3" playsinline disablepictureinpicture disableremoteplayback controls muted loop height="90%">
+        <div class="item item-video4 is-centered">
+          <video poster="assets/result_64.png" id="video3" playsinline disablepictureinpicture disableremoteplayback controls muted loop onclick="this.paused ? this.play() : this.pause();" height="90%">
             <source src="https://github.com/Cfather/DigitSafePlanning/assets/41474684/ffabb3e6-1d70-4386-9f25-187208ea630d"
             type="video/mp4">
           </video>
         </div>
-        <div class="item item-video5">
-          <video poster="assets/result_70.png" id="video4" playsinline disablepictureinpicture disableremoteplayback controls muted loop height="90%">
+        <div class="item item-video5 is-centered">
+          <video poster="assets/result_70.png" id="video4" playsinline disablepictureinpicture disableremoteplayback controls muted loop onclick="this.paused ? this.play() : this.pause();" height="90%">
             <source src="https://github.com/Cfather/DigitSafePlanning/assets/41474684/81edb294-657a-4d71-9b94-f00461fedbbd"
             type="video/mp4">
           </video>
         </div>
-        <div class="item item-video6">
-          <video poster="assets/result_91.png" id="video4" playsinline disablepictureinpicture disableremoteplayback controls muted loop height="90%">
+        <div class="item item-video6 is-centered">
+          <video poster="assets/result_91.png" id="video4" playsinline disablepictureinpicture disableremoteplayback controls muted loop onclick="this.paused ? this.play() : this.pause();" height="90%">
             <source src="https://github.com/Cfather/DigitSafePlanning/assets/41474684/42d34aa2-cfad-4f5b-b894-8edfb30f7309"
             type="video/mp4">
           </video>
