--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@
                 </span>
 
                   <!-- Another Github link -->
-                  <span class="link-block">
+                  <!-- <span class="link-block">
                     <a href="https://github.com/Cfather/DigitSafePlanning" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
                     <span>Code (Planning)</span>
-                  </a>
+                  </a> -->
                 </span>
 
                 <!-- ArXiv abstract Link -->
