--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
-                    <span>Code (Trajectory Optimization)</span>
+                    <span>Code</span>
                   </a>
                 </span>
 
